src/rules/flake8_print/snapshots/ruff__flake8_print__tests__T201_T201.py.snap
---
source: src/flake8_print/mod.rs
expression: checks
---
- kind:
    PrintFound: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 5
  fix:
    content: ""
    location:
      row: 4
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~
- kind:
    PrintFound: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 5
  fix:
    content: ""
    location:
      row: 5
      column: 0
    end_location:
      row: 6
      column: 0
  parent: ~
- kind:
    PrintFound: ~
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 5
  fix:
    content: ""
    location:
      row: 6
      column: 0
    end_location:
      row: 7
      column: 0
  parent: ~
- kind:
    PrintFound: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 5
  fix:
    content: ""
    location:
      row: 7
      column: 0
    end_location:
      row: 8
      column: 0
  parent: ~

