src/rules/flake8_print/snapshots/ruff__flake8_print__tests__T203_T203.py.snap
---
source: src/flake8_print/mod.rs
expression: checks
---
- kind:
    PPrintFound: ~
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 6
  fix:
    content: ""
    location:
      row: 3
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~
- kind:
    PPrintFound: ~
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 13
  fix:
    content: ""
    location:
      row: 7
      column: 0
    end_location:
      row: 8
      column: 0
  parent: ~

